--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 spring.cloud.config.server.git.uri=file:///A:/Courses A/Spring Boot Projects/Master Microservices with Spring Boot and Spring Cloud/Project
+spring.cloud.config.server.git.searchPaths=git-local-config-repo
