--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=currency-conversion
 server.port=8100
 spring.cloud.config.import-check.enabled=false
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
