--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=api-gateway
 server.port=8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+#All the authentication logic can be implemented on the API Gateway
