Connecting Currency Conversion Microservice & API Gateway with Zipkin

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,3 +6,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 #All the authentication logic can be implemented on the API Gateway
+#spring.sleuth.sampler.probability=1.0 #SB2
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
