--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=currency-conversion
 server.port=8100
 spring.cloud.config.import-check.enabled=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#spring.sleuth.sampler.probability=1.0 #SB2
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
